fixed some bugs and added place-ships html page for palcing ships before game is started

--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,3 +1,4 @@
+<!-- TODO: remove console logs -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -63,7 +64,7 @@
                         
                             <h1>BATTLESHIP V: BATTLE ROYALE EDITION </h1>
                             <h3>supports 1-v-1 only</h3></br>
-                            <form action="/play" method="get">
+                            <form action="/place-ships" method="get">
                                 <button type="submit">PLAY</button>
                             </form>
                 </div>
