--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,6 +1,6 @@
 @import 'Style.css';
 
-.battlefield{
+.battlefield {
 	position:relative; 
 	width:100%;
 	height:80%;
@@ -8,7 +8,7 @@
 	background-color: rgba(255,255,255,0.7);	
 }
 
-.battlefield_self{
+.battlefield_self {
 	position: absolute;
 	float:left;
 	margin-left:7%;
@@ -21,7 +21,7 @@
     opacity: 1;
 }
 
-.battlefield_self_table{
+.battlefield_self_table {
 	position:relative;
 	width:100%;
 	height:100%;
@@ -32,12 +32,12 @@
 }
 
 
-.battlefield_row{
+.battlefield_row {
 	width:100%;
 	border-collapse:collapse;
 }
 
-.battlefield_cell, .battlefield_cell1{
+.battlefield_cell, .battlefield_cell1 {
 	width:25px;
 	height:25px;
 	border: 1px solid #ffffff;
@@ -46,7 +46,7 @@
 }
 
 
-.battlefield_cell2,.battlefield_cell0{
+.battlefield_cell2, .battlefield_cell0 {
 	width:42.5px;
 	height:42.5px;
 	border: 1px solid #ffffff;
@@ -55,19 +55,28 @@
 	text-align: center;
 }
 
-.battlefield_cell0{
+/* prevent text selection of the coordinates  */
+.battlefield_cell2, .battlefield_cell0 {
+	user-select: none; /* supported by Chrome and Opera */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+.battlefield_cell0 {
 	background-color: rgba(70, 4, 4, 0.7);
 }
 
-.battlefield_cell2{
+.battlefield_cell2 {
 	background-color: rgba(4, 4, 70, 0.7);
 }
 
-.battlefield_cell1:hover{
+.battlefield_cell1:hover {
 	background-color: rgb(78, 6, 6);
 }
 
-.battlefield_rival{
+.battlefield_rival {
 	float:right;
 	margin-top: 7%;
 	margin-right:6%;
@@ -79,7 +88,7 @@
     background-repeat: no-repeat;
 }
 
-.battlefield_rival_table{
+.battlefield_rival_table {
 	position:relative;
 	width:100%;
 	height:100%;
@@ -89,20 +98,20 @@
 	border: 0px solid #BB820F;
 } 
 
-#playerb_tag{ 
+#playerb_tag { 
 	position: relative;
 	top: 15.5%;
 	margin-left: 75%; 
 	font-size: 120%;
 }
 
-#playera_tag{
+#playera_tag {
 	margin-left: 22%; 
 	margin-top: 6%; 
 	font-size: 120%;
 }
 
-#timer{
+#timer {
 	font-size: 23px; 
 	right: 45%; 
 	color:rgb(0, 0, 0); 
@@ -111,7 +120,7 @@
 	display: none;
 }
 
-#timertext{
+#timertext {
 	position: absolute; 
 	left: 46%; 
 	color:white; 
@@ -120,7 +129,7 @@
 	display:inline-block;
 }
 
-#timertext2{
+#timertext2 {
 	font-size: 23px; 
 	margin-left: 45%;
 	color:rgb(0, 0, 0); 
@@ -129,7 +138,7 @@
 	text-decoration: underline;
 }
 
-#fullscreen{
+#fullscreen {
 	width:4%; 
 	height:auto;
 	float: right;
@@ -137,14 +146,14 @@
 	margin-right: 5%;
 }
 
-#fullscreen:hover{
+#fullscreen:hover {
 	width:6%;
 	height:auto;
 	margin-top: 0;
 	margin-right: 4%;
 }
 
-.notifications{
+.notifications {
 	width: 100%;
 	border: 0px solid #000;
     background:rgb(255, 255, 255);
@@ -155,17 +164,18 @@
 
 .marquee {
     white-space: nowrap;
-    -webkit-animation: rightThenLeft 30s ease-in-out;
+	-webkit-animation: rightThenLeft 30s ease-in-out;
+			animation: rightThenLeft 30s ease-in-out;
 	animation-iteration-count: infinite;
 }
 
-@-webkit-keyframes rightThenLeft {
+@keyframes rightThenLeft {
     0%   {margin-right:80%;}
     50%  {margin-right:20%;}
     100% {margin-right:80%;}
 }
 
-.Scoreboard{
+.Scoreboard {
 	position: absolute;
 	background-color:white;
 	width:30%;
@@ -177,19 +187,19 @@
 	background-color:rgba(180, 180, 180,0.7);
 }
 
-#ScoreSelf{
+#ScoreSelf {
 	width: 48.5%;
 	float: left;
 	border:dotted;
 }
 
-#ScoreRival{
+#ScoreRival {
 	width: 48.5%;
 	float: right;
 	border:dotted;
 }
 
-#roster-sidebar{
+#roster-sidebar {
 	position: absolute;
 	margin-left:44.5%;
 	width: 10%;
@@ -219,7 +229,7 @@ button:hover {
 button:active {
 	background-color:black;
 }
-#startgamebutton{
+#startgamebutton {
 		position: relative;
 		color: #FFFFFF;
 		background-color: #FF9200;
@@ -228,6 +238,6 @@ button:active {
 #startgamebutton:hover {
 		background-color: #FFB655;
 }
-#startgamebutton:active{
+#startgamebutton:active {
 		background-color:black;
 }
