--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,17 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+    <head lang="en">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel = "stylesheet"type = "text/css" href = "stylesheets/error.css" />
+    </head>
+        
+    <body>
+        <div class="error">
+            <h1><%= error %></h1>
+            <h2>Please notify the support team about this. We are sorry for the inconvenience. </h2>
+        </div>
+    </body>
+</html>
+
