--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -10,6 +10,7 @@ body {
     position: relative;
     text-align: center;
     font-weight: bold;
+    color: darkred;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
 }
