--- a/views/game.ejs
+++ b/views/game.ejs
@@ -148,6 +148,7 @@
     </footer>
     <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
     <!-- <script type="text/javascript" src="javascripts/ShipPlacement.js"></script> -->
