Made some small changes

--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -14,8 +14,8 @@
 	<link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
 	<script type="text/javascript" src="javascripts/jquery.js"> </script>
 	<link rel="shortcut icon" type="image/png" href="images/favi.png"/>
-	<!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
 </head>
     
@@ -32,7 +32,7 @@
 		
 		<div class="notifications">
 				<span class="marquee" id="notification">Place the <b>Aircraft Carrier</b> on the grid</span>
-		</div>
+		</div> 
 		
 		<div class="battlefield">
 			<div id="roster-sidebar">
