--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,7 +1,7 @@
 @import 'Style.css';
 
 .battlefield {
-	position:relative; 
+	position: relative !important; 
 	width:100%;
 	height:80%;
 	border: 0px solid #FD1E1E;
@@ -9,26 +9,26 @@
 }
 
 .battlefield_self {
-	position: absolute;
-	float:left;
-	margin-left:7%;
-	width:500px;
-	height:500px;
+	position: absolute !important;
+	float:left !important;
+	margin-left:7% !important;
+	width:500px !important;
+	height:500px !important;
     border: 0px solid #000000;
-	background: url("../images/template.png");
-	background-size: auto;
-    background-repeat: no-repeat;
-    opacity: 1;
+	background: url("../images/template.png") !important;
+	background-size: auto !important;
+    background-repeat: no-repeat !important;
+    opacity: 1 !important;
 }
 
 .battlefield_self_table {
-	position:relative;
-	width:100%;
-	height:100%;
-	border-collapse:collapse;
-	cursor:default;
-	display:inline-block;
-	border: 0px solid #ffffff;
+	position:relative !important;
+	width:100% !important;
+	height:100% !important;
+	border-collapse:collapse !important;
+	cursor:default !important;
+	display:inline-block !important;
+	border: 0px solid #ffffff !important;
 }
 
 
