--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -111,6 +111,9 @@
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
 <script type="text/javascript" src="javascripts/ShipPlacement.js" id="shipplacement"></script>
+<script type="text/javascript" src="javascripts/shared.js" ></script>
+<script type="text/javascript" src="javascripts/coordinate.js" ></script>
+<script type="text/javascript" src="javascripts/shipsGenerator.js"></script>
 
 </body>
 
