--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -53,7 +53,7 @@
 			
 				<table class="battlefield_self_table">
                         <%# here the grid is auto generated %>
-                        <%# return the next character of the current char "c" in the ASCII ordering/ecnoding %>
+                        <%# return the next character of the current char "c" in the ASCII ordering/encoding %>
                         <% 
                             function nextChar(c) {
                                 return String.fromCharCode(c.charCodeAt(0) + 1);
