modified and added messages, added renderShips js file to handle ship rendering on grid, removed waitingpage.ejs and now ship-placement to play is done and no waitingpage is needed

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -146,12 +146,11 @@
             <div id="m">Support us on patreon!</div>
             <div id="r">... we need the money...</div>
     </footer>
-    <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
+    <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
     <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
-    <!-- <script type="text/javascript" src="javascripts/ShipPlacement.js"></script> -->
     <script type="text/javascript" src="javascripts/initWebsocket.js"></script>
 
     </body>
