--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -44,7 +44,7 @@
 						<button id="battleship">Battleship = 4 Tiles</button></br>
 						<button id="carrier">Aircraft Carrier = 5 Tiles</button></br>
 						<!-- <button id="rotate-button" data-direction="0">Rotate Ship</button> -->
-						<form action="/waiting-page" method="get">
+						<form action="/play" method="get">
 							<button id="startgamebutton" type="submit" disabled>Start Game</button>
 						</form>
 			</div>
