fixed bugs in localStorageHandler.js, added randomize functionality when randomize button is clicked, now everytime start game button is clicked the grid is stored in local storage so that it can be sent to the socket to set the players grid, removed ES6 notation of variables so that the scripts are compatible with most browsers

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -148,6 +148,7 @@
     </footer>
     <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
     <script type="text/javascript" src="javascripts/shared.js"></script>
     <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
     <script type="text/javascript" src="javascripts/messages.js"></script>
