--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,39 +5,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
         <title>Battleship V: Battle Royale Edition</title>   
-        <link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
+        <link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <script type="text/javascript" src="javascripts/jquery.js"> </script>
-        <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
-
-        <!-- TODO: make styling only using bootstrap -->
-        <!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> -->
-
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     </head>
     
     <body> 
     <!-- =================================================================-->  
     <main class="main">
         <div class="body"> 
-            <header class="header">
-                            
-                <!-- <h4 id="timertext2">TIMER:</h4>
-                <div id="timertext">30</div> -->
-                
-                <!-- the text "seconds left" must be visible only when the game starts (so when opponents are found)  -->
-                <!-- <h4 id="timer">seconds</h4>
-                <h4 id="timer">left</h4> -->
+            <div class="header" class="container-fluid">
+                <div class="row justify-content-between">
+                    <!-- <h4 id="timertext2">TIMER:</h4>
+                    <div id="timertext">30</div> -->
+                    <!-- the text "seconds left" must be visible only when the game starts (so when opponents are found)  -->
+                    <!-- <h4 id="timer">seconds</h4>
+                    <h4 id="timer">left</h4> -->
+                    <div class="col-4"> <image src="images/logo.png" id="splash_logo">Battleship V</image> </div>
+                    <div class="col-4"> <input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image"> </div>
+                </div>
+            </div>
 
-                <input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image">
-                <h2><image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">BATTLESHIP V</h2>
-                    
-            </header>
-            
-            <!-- <div class="notifications">
-                    <span class="marquee" id="notification">No Notifications</span>
-            </div> -->
-            
             <div class="battlefield">
                 <div class="Scoreboard">
                     <div id="ScoreSelf">
@@ -140,12 +131,17 @@
         </div>	
     </main>     
     <!-- =================================================================-->
-    
+
     <footer id="footer">
-            <div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-            <div id="m">Support us on patreon!</div>
-            <div id="r">... we need the money...</div>
+        <div class="container-fluid">
+            <div class="row justify-content-around">
+              <div class="col-3"> &copy&nbspCopyright 2018  | All rights reserved. </div>
+              <div class="col-3"> Support us on patreon! </div>
+              <div class="col-3"> ... we need the money... </div>
+            </div>
+          </div>
     </footer>
+
     <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
     <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
