--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -10,39 +10,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>Battleship V: Battle Royale Edition</title>   
-	<link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
+    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
+    <title>Battleship V: Battle Royale Edition</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.js"> </script>
-	<link rel="shortcut icon" type="image/png" href="images/favi.png"/>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-
 </head>
     
 <body> 
  <!-- =================================================================-->  
    <main class="main">
 	<div class="body"> 
-		<header class="header">
+        <div class="header" class="container-fluid">
+            <div class="row justify-content-between">
+                <div class="col-4"> <image src="images/logo.png" id="splash_logo">Battleship V</image> </div>
+                <div class="col-4"> <input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image"> </div>
+            </div>
+        </div>
 
-			<input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image">
-			<h2><image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">BATTLESHIP V</h2>
-				
-		</header>
-		
-		<div class="notifications">
-				<span class="marquee" id="notification">Place the <b>Aircraft Carrier</b> on the grid</span>
-		</div> 
-		
-		<div class="battlefield">
+        <div class="battlefield">
 			<div id="roster-sidebar">
-						<!-- <h4>Place all the ships on the grid</h4> -->
-						
-						<!-- <button class="btn primary" id="patrolboat">Patrol Boat = 2 Tiles</button></br>
-						<button class="btn primary" id="submarine">Submarine = 3 Tiles</button></br>
-						<button class="btn primary" id="destroyer">Destroyer = 3 Tiles</button></br>
-						<button class="btn primary" id="battleship">Battleship = 4 Tiles</button></br>
-						<button class="btn primary" id="carrier">Aircraft Carrier = 5 Tiles</button></br> -->
 						<button class="btn btn-primary" id="randomize-button">Randomize Ships</button>
 						<form action="/play" method="get">
 							<button class="btn" id="startgamebutton" type="submit">Start Game</button>
@@ -103,10 +91,15 @@
  <!-- =================================================================-->
  
  <footer id="footer">
-		<div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-		<div id="m">Support us on patreon!</div>
-		<div id="r">... we need the money...</div>
+    <div class="container-fluid">
+        <div class="row justify-content-around">
+          <div class="col-3"> &copy&nbspCopyright 2018  | All rights reserved. </div>
+          <div class="col-3"> Support us on patreon! </div>
+          <div class="col-3"> ... we need the money... </div>
+        </div>
+      </div>
 </footer>
+
 <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
@@ -115,7 +108,6 @@
 <script type="text/javascript" src="javascripts/coordinate.js" ></script>
 <script type="text/javascript" src="javascripts/shipsGenerator.js"></script>
 <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
-
 </body>
 
 
