--- a/views/game.ejs
+++ b/views/game.ejs
@@ -60,6 +60,9 @@
                 <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
                 <% var currLetter = 'A' %>
 
+                <%# Defining the variables to be used for loops %>
+                <% var row, col, i; %>
+
                 <%# Create grid of current player %> 
                 <h4 id="playera_tag"> Your Grid </h4>
                 <div class="battlefield_self">
@@ -67,13 +70,13 @@
                         <tbody>
                             <%# Create the first row of letters for coordinates %> 
                             <tr class="battlefield_row">
-                                <td class="battlefield_cell2">
+                                <td class="battlefield_cell_self_coord">
                                 </td>
-                                <td class="battlefield_cell2">
+                                <td class="battlefield_cell_self_coord">
                                     <%= currLetter %>
                                 </td>
-                                <% for(var i = 0; i < gridDim.cols - 1; i++) { %>
-                                    <td class="battlefield_cell2">
+                                <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                    <td class="battlefield_cell_self_coord">
                                       <% currLetter = nextChar(currLetter) %>
                                       <%= currLetter %>
                                     </td>
@@ -81,13 +84,13 @@
                             </tr>
 
                             <%# Create the clickable tiles and the numbered rows for coordinates %> 
-                            <% for (let row = 0; row < gridDim.rows; row++) { %>
+                            <% for (row = 0; row < gridDim.rows; row++) { %>
                                 <tr class="battlefield_row">
-                                    <td class="battlefield_cell2">
+                                    <td class="battlefield_cell_self_coord">
                                         <%= row + 1 %> 
                                     </td>
-                                    <% for( let col = 0; col < gridDim.cols; col++ ) { %>
-                                        <td class="battlefield_cell1" data-x="<%= col %>"  data-y="<%= row %>">
+                                    <% for(col = 0; col < gridDim.cols; col++) { %>
+                                        <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
                                         </td>
                                     <% } %>
                                 </tr>
@@ -102,31 +105,34 @@
                     <table class="battlefield_rival_table">
                         <%# Reset currLetter to start letter 'A' %> 
                         <% currLetter = 'A' %>
+                        
+                        <%# Defining the variables to be used for loops %>
+                        <% var row, col, i; %>
 
                         <tbody>
                             <%# Create the first row of letters for coordinates %>
                             <tr class="battlefield_row">
-                                <td class="battlefield_cell0">
+                                <td class="battlefield_cell_rival_coord">
                                 </td>
-                                <td class="battlefield_cell0">
+                                <td class="battlefield_cell_rival_coord">
                                     <%= currLetter %>
                                 </td>
-                                <% for(var i = 0; i < gridDim.cols - 1; i++) { %>
-                                    <td class="battlefield_cell0">
+                                <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                    <td class="battlefield_cell_rival_coord">
                                       <% currLetter = nextChar(currLetter) %>
                                       <%= currLetter %>
                                     </td>
                                  <% } %>
                             </tr>
 
-                            <%# Create the clickable tiles and the numbered rows for coordinates %>
-                            <% for (let row = 0; row < gridDim.rows; row++) { %>
+                            <%# Create the clickable tiles and the numbered rows for coordinates %> 
+                            <% for (row = 0; row < gridDim.rows; row++) { %>
                                 <tr class="battlefield_row">
-                                    <td class="battlefield_cell0">
+                                    <td class="battlefield_cell_rival_coord">
                                         <%= row + 1 %> 
                                     </td>
-                                    <% for( let col = 0; col < gridDim.cols; col++ ) { %>
-                                        <td class="battlefield_cell" data-x="<%= col %>"  data-y="<%= row %>">
+                                    <% for(col = 0; col < gridDim.cols; col++) { %>
+                                        <td class="battlefield_cell_rival_tile" data-x="<%= col %>"  data-y="<%= row %>">
                                         </td>
                                     <% } %>
                                 </tr>
