--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -22,53 +22,53 @@
 
                 <!-- =================================================================-->
 
-                <div id="content">
-                    <div id="left">
-                        <div id="top">
-                            <h4 style="text-decoration:underline; font-weight: bold; color: rgb(83, 0, 0);">Exited Games: </h4>
-                            <h4 id="peopleonline">
-                                <%= exitedGames %>
-                                Exited
-                                <%if (gamesInitialized != 1) { %>
-                                    Games
-                                <% } else { %>
-                                    Game
-                                <% } %>
-                            </h4>
-                            <h4 style="text-decoration:underline; font-weight: bold; color: rgb(83, 0, 0);">Ongoing games: </h4>
-                            <h4 id="peopleplaying">
-                            <%= gamesInitialized %> 
-                            <%if (gamesInitialized != 1) { %>
-                                Games
-                            <% } else { %>
-                                Game
-                            <% } %>
-                            initialized 
-                            
-                            </h4>
-                            <h4 style="text-decoration:underline; font-weight: bold; color: rgb(83, 0, 0);">Games completed: </h4>
-                            <h4 id="completedgames">
-                            <%= gamesCompleted %>
-                            Completed
-                            </h4>
+                <div id="content" class="container-fluid">
+                    <div class="row h-100">
+                        <div class="col-2">
+                            <div id="stats-top" class="row">
+                                <h4 id="counter-text">
+                                    Exited Games: <span id="counter"><%= exitedGames %></span> 
+                                </h4>
+                                <h4 id="counter-text">
+                                    Ongoing games: <span id="counter"><%= gamesInitialized %></span>
+                                </h4>
+                                <h4 id="counter-text">
+                                    Games completed: <span id="counter"><%= gamesCompleted %>
+                                </h4>
+                            </div>
 
+                            <div id="stats-bottom" class="row">
+                                <div class="row w-100"><b>BEST GAME OF THE YEAR!</b></div>
+                                <div class="row w-100"><i> - According to us...</i></div>
+                                <div class="row w-100"><b>FREE TO PLAY!</b></div>
+                                <div class="row w-100"><i> - For the first 2 battles only...</i></div>
+                                <div class="row w-100"><b>DEVELOPED BY EXPERTS!</b></div>
+                                <div class="row w-100"><i> - Self proclaimed experts with only a few months of experience...</i></div>
+                            </div>
                         </div>
-                        <div id="bottom">
-                                <p>BEST GAME of the year!</p>
-                                <i> -according to us...</i>
-                                <p>FREE to play!</p>
-                                <i> - for the first 2 battles only...</i>
-                                <p>Made by experts!</p>
-                                <i> - self proclaimed experts with only a few months of experience...</i>
+
+                        <!-- =================================================================-->
+                        
+                        <div id="gamestart" class="col-10">
+                            <div class="row justify-content-center">
+                                <div id="gamestart-title" class="row w-100"> 
+                                    <div class="col">
+                                        <h1>BATTLESHIP V: BATTLE ROYALE EDITION </h1>
+                                    </div>
+                                </div>
+                                <div id="g-m" class="row"> 
+                                    <div class="col">
+                                        <h2> ~ supports 1-v-1 only ~ </h2>
+                                    </div>
+                                </div>
+                                <div id="gamestart-button" class="row w-100">
+                                    <div class="col">
+                                        <form action="/place-ships" method="get"><button type="submit">Play</button></form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div id="middle">
-                                <h1>BATTLESHIP V: BATTLE ROYALE EDITION </h1>
-                                <h3>supports 1-v-1 only</h3></br>
-                                <form action="/place-ships" method="get">
-                                    <button type="submit">PLAY</button>
-                                </form>
-                    </div>
+                     </div>
                 </div>
             </div>
         </main>
@@ -78,7 +78,7 @@
         <footer id="footer">
             <div class="container-fluid">
                 <div class="row justify-content-around">
-                  <div class="col-3"> &copy&nbspCopyright 2018  | All rights reserved. </div>
+                  <div class="col-3"> &copy&nbspCopyright 2020  | All rights reserved. </div>
                   <div class="col-3"> Support us on patreon! </div>
                   <div class="col-3"> ... we need the money... </div>
                 </div>
