--- a/public/stylesheets/Style.css
+++ b/public/stylesheets/Style.css
@@ -1,11 +1,12 @@
 body, html {
 	height: 100%;
+	width: 100%;
 	background-color: #000000;
  }
  
  .main {
 	background: url("../images/background.png");
-	height: 100%; 
+	height: 97%; 
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -22,23 +23,6 @@ body, html {
 	height: 70px; 
 	width: auto;
 	vertical-align: middle;
-}
-
-.centerbutton{
-	position: absolute;
-	text-align: center;
-	top:50%;
-	left: 50%;
-}
-
-.online_count{
-	position:relative;
-	height: 5px;
-	font-size:12px;
-	font-weight:400;
-	white-space:nowrap;
-	color:#999;
-	background-color: rgb(255, 255, 255);
 }
 
 .battlefield{
@@ -173,17 +157,11 @@ body, html {
 
 #footer{
 	width: 100%;
-	height: 2em;
+	height: 3%;
 	background: rgb(122, 102, 179);
 	color:white;
 	font-weight:bold;
 	font-size:12px;
-	position:fixed;    /*Here's what sticks it*/
-	bottom:0;          /*to the bottom of the body*/
-	left:0;            /*and to the left of the body.*/
-	z-index: 1;
-	
-	/*EFFECTS*/
 	transition:.33s linear;
 }
 
@@ -199,7 +177,7 @@ h1 {
 	text-align: center;
 }
 
-a {
+a, button {
 	background-color: rgb(49, 31, 207);
 	margin-top: 0.3em;
 	padding: 0.2em;
@@ -210,19 +188,8 @@ a {
 	height: 44px;
 }
 
-a:hover{
+a:hover, button:hover{
 	background-color: rgba(150, 0, 0, 0.7);
-}
-
-i, p {
-	font-size: 86%;
-	color: rgb(83, 0, 0);
-}
-
-h3{
-	font-size: 250%;
-	color: rgb(255, 255, 255);
-	display: inline-block;
 }
 
 #you_tag{ 
