--- a/public/stylesheets/splash.css
+++ b/public/stylesheets/splash.css
@@ -1,29 +1,37 @@
 @import 'Style.css';
 
 #content {
+	margin-top: 1em;
 	background-color: rgba(248, 218, 218, 0.5);
-	height:80%;
+	height:47em;
+	width: 90%;
+	margin-left: 5%;
+	border-radius: 8px;
 }
 
-#left{
-	width: 15%;
-	float: left;
+#stats-top {
+ 	margin-left: 2%;
+ 	margin-top: 10%;
 }
 
-#top{
-	margin-top: 40%;
+#stats-bottom {
+	position: absolute;
+	bottom: 5%;
 	margin-left: 5%;
 }
 
-#bottom{
-	margin-top: 100%;
-	margin-left: 5%;
+#counter-text {
+	text-decoration:underline; 
+	font-weight: bold; 
+	color: rgb(83, 0, 0);
 }
 
-#middle{
-	width:80%;
+#counter {
+	color: white;
+}
+
+#gamestart{
 	margin: auto;
-	text-align: center;
 	height: 100%;
 	background: url("../images/world.png");
 	background-size: 100%;
@@ -31,20 +39,40 @@
 	background-position: center;
 }
 
+#gamestart-title {
+	margin-top: 10%;
+	text-shadow: -1.5px 0 white, 0 1.5px white, 1.5px 0 white, 0 -1.5px white;
+	font-weight: bold; 
+}
 
+h2 {
+	color: white;
+	font-weight: bold; 
+}
 
-button:hover{
-	background-color: rgba(150, 0, 0, 0.7);
-	cursor: pointer;
+#gamestart-button {
+	margin-top: 5%;
+	margin-left: 50%;
+}
+
+.online_count{
+	position:relative;
+	height: 5px;
+	font-size:12px;
+	font-weight:400;
+	white-space:nowrap;
+	color:#999;
+	background-color: rgb(255, 255, 255);
 }
 
 button {
-	background-color: rgb(49, 31, 207);
-	padding: 14px 25px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	color: white;
+	padding-left: 1em;
+	padding-right: 1em;
+	margin: 0px;
+	border-style: none;
+	font-weight: bold; 
 }
 
-/* removed ::before on peopleplaying and peopleonline they are not needed */
+button:hover{
+	cursor: pointer;
+}
