modified how notifications are displayed (now using bootstrap) in game.css

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -155,11 +155,11 @@
 
 .notifications {
 	width: 100%;
-	border: 0px solid #000;
-    background:rgb(255, 255, 255);
-    height: 25px;
-	text-align: right;
-	vertical-align: center;
+	text-align: center;
+}
+
+.notifications .alert {
+	margin-bottom: 9px;
 }
 
 .marquee {
